# aibat

./: .gitignore  CACHING_IMPLEMENTATION.md  README.md  package.json
apps/backend/: Dockerfile  README.md  cloudbuild.yaml  main.py  pyproject.toml  test_caching.py
apps/backend/app/api/v1/: api.py
apps/backend/app/api/v1/endpoints/: auth.py  criteria.py  logs.py  models.py  onboard.py  perturbations.py  tests.py  topics.py  views.py
apps/backend/app/core/: config.py  criteria_config.py  firebase_auth.py  firebase_client.py  model_config.py  model_registry.py  topic_config.py
apps/backend/app/models/: schemas.py
apps/backend/app/pipelines/: gcp_pipeline.py  groq_pipeline.py  huggingface_pipeline.py
apps/backend/app/services/: assessment_cache_service.py  criteria_service.py  logs_service.py  models_service.py  onboard_service.py  perturbations_service.py  shared_test_utils.py  tests_service.py  topics_service.py  views_service.py
apps/backend/app/utils/: logs.py  model_selector.py  user_session.py
apps/backend/tests/: test_caching.py
apps/frontend/: Dockerfile  README.md  cloudbuild.yaml  next.config.ts  package.json  pnpm-lock.yaml
apps/frontend/src/app/: globals.css  layout.tsx  page.tsx
apps/frontend/src/components/: TopicList.tsx  add-statements-form.tsx  add-topic-form.tsx  ai-behavior-analyzer.tsx  app-sidebar.tsx  chart-tooltip-default.tsx  criteria-editor.tsx  criteria-manager.tsx  data-table.tsx  login-form.tsx  model-selector.tsx  model-toggle.tsx  nav-main.tsx  nav-secondary.tsx  nav-topics.tsx  settings-drawer.tsx  signup-form.tsx  (+3 more)
(+70 files in other folders)
